# AiInfer

./: .gitignore  CMakeLists.txt  README.md  compiel.sh  compile_and_run.sh  main.cpp  main_yolov8_seg copy.cpp
application/bevfusion_app/: README.md
application/bevfusion_app/bevfusion_det_cuda/: bevfusion_det.cpp  bevfusion_det.hpp
application/det_track_app/: README.md
application/paddle_ocr_app/: README.md
application/rtdetr_det_app/: README.md
application/rtdetr_det_app/rtdetr_cuda/: rtdetr_detect.cpp  rtdetr_detect.hpp
application/tensorrt_demo/trt_yolov8_cpp/: yolov8_face_detect.cpp  yolov8_face_detect.hpp
application/tensorrt_demo/trt_yolov8_cuda/: yolov8_face_detect.cpp  yolov8_face_detect.hpp
application/trt_yolov8_cpp/: yolov8_face_detect.cpp  yolov8_face_detect.hpp
application/trt_yolov8_cuda/: yolov8_face_detect.cpp  yolov8_face_detect.hpp
application/yolo_series_app/: README.md
application/yolo_series_app/yolo_det_cuda/: yolo_series_detect.cpp  yolo_series_detect.hpp
application/yolov8_app/: README.md
application/yolov8_app/yolov8_det_cuda/: yolov8_detect.cpp
application/yolov8_app/yolov8_pose_cuda/: yolov8_pose.cpp  yolov8_pose.hpp
application/yolov8_app/yolov8_seg_cuda/: yolov8_seg.cpp  yolov8_seg.hpp
application/yolov8_det_app/yolov8_cpp/: yolov8_detect.cpp  yolov8_detect.hpp  yolov8_face_detect.cpp  yolov8_face_detect.hpp
application/yolov8_det_app/yolov8_cuda/: yolov8_detect.cpp  yolov8_detect.hpp  yolov8_face_detect.cpp  yolov8_face_detect.hpp
assets/: get_device_sm.py
assets/python_tools/bevfusion_qat/: onnx_to_engine.sh  ptq.py
assets/python_tools/bevfusion_qat/bevcore/: exptool.py
assets/python_tools/bevfusion_qat/export/: export-camera.py  export-lidar.py  export-transfuser.py
backend/openvino/: openvino_infer.cpp  openvino_infer.hpp
backend/tensorrt/: trt_infer.cpp  trt_infer.hpp
main/: main_trt.cpp
mains/: main_bevfusion_det.cpp  main_rtdetr.cpp  main_track_yolov8_det.cpp  main_yolo_series_det.cpp  main_yolov8.cpp  main_yolov8_det.cpp  main_yolov8_pose.cpp  main_yolov8_seg.cpp
utils/backend/: backend_infer.hpp
utils/backend/tensorrt/: infer.cpp  infer.hpp  trt_infer.cpp  trt_infer.hpp
utils/common/: arg_parsing.cpp  arg_parsing.hpp  cuda_utils.hpp  cv_cpp_utils.cpp  cv_cpp_utils.hpp  memory.cpp  memory.hpp  model_info.hpp  utils.cpp  utils.hpp
utils/post_process/: post_process.cpp  post_process.cu  post_process.cuh  post_process.hpp
utils/pre_process/: pre_process.cpp  pre_process.cu  pre_process.cuh  pre_process.hpp
utils/tracker/ByteTracker/: byte_tracker.hpp
utils/trt/: infer.cpp  infer.hpp
